# DynamicWallpaper

./: .gitignore  AutoStartUI.vbs.vbs  CMakeLists.txt  CreateShortcut.vbs  DynamicWallpaperUI.bat  README.md  StartWallpaper.vbs  build.bat  build2.bat  build_debug.bat  build_debug2.bat  build_dumptree.bat  build_log.txt  build_log10.txt  build_log11.txt  build_log12.txt  build_log13.txt  build_log14.txt  build_log15.txt  build_log17.txt  build_log18.txt  build_log19.txt  build_log2.txt  build_log20.txt  build_log21.txt  build_log22.txt  build_log23.txt  build_log24.txt  build_log25.txt  build_log26.txt  build_log27.txt  build_log3.txt  build_log4.txt  build_log5.txt  build_log7.txt  build_log8.txt  build_log9.txt  config.example.txt  dump_tree.cs  dump_tree.ps1  (+14 more)
WebUI/: config.json  launcher.py
WebUI/static/: app.js  index.html  styles.css
build_msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  DynamicWallpaper.sln  DynamicWallpaper.vcxproj  DynamicWallpaper.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_msvc/DynamicWallpaper.dir/Release/: DynamicWallpaper.exe.recipe
build_msvc/DynamicWallpaper.dir/Release/DynamicWallpaper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_msvc/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_msvc/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
src/: VideoPlayer.cpp  VideoPlayer.h  main.cpp
(+6 files in other folders)
